Fix deprecated URL constructors in XMLLibXML.java
Replace deprecated URL(String) and URL(URL, String) constructors with the modern URI.resolve().toURL() pattern. This eliminates deprecation warnings that appear with Java 20+.

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>